--- a/index.html
+++ b/index.html
@@ -22,14 +22,50 @@
   </head>
   <body>
     <div class="container__price__0">
-      <div class="container__0">IMG + PRICE 1</div>
-      <div class="container__1">IMG + PRICE 2</div>
-      <div class="container__2">IMG + PRICE 3</div>
+      <div class="container__0">
+        <img
+          class="product1"
+          src="./img_products/1__table__products/product1.png"
+          alt="product1"
+        />
+      </div>
+      <div class="container__1">
+        <img
+          class="product2"
+          src="./img_products/2__table__products/product1.png"
+          alt="product2"
+        />
+      </div>
+      <div class="container__2">
+        <img
+          class="product3"
+          src="./img_products/3__table__products/product1.png"
+          alt="product3"
+        />
+      </div>
     </div>
     <div class="container__price__1">
-      <div class="container__3">IMG + PRICE 4</div>
-      <div class="container__4">IMG + PRICE 5</div>
-      <div class="container__5">IMG + PRICE 6</div>
+      <div class="container__3">
+        <img
+          class="product4"
+          src="./img_products/4__table__products/product1.png"
+          alt="product4"
+        />
+      </div>
+      <div class="container__4">
+        <img
+          class="product5"
+          src="./img_products/5__table__products/product1.png"
+          alt="product5"
+        />
+      </div>
+      <div class="container__5">
+        <img
+          class="product56"
+          src="./img_products/6__table__products/product1.png"
+          alt="product5"
+        />
+      </div>
     </div>
     <div class="container__slider">
       <div class="slider"></div>
