--- a/index.html
+++ b/index.html
@@ -22,44 +22,43 @@
   </head>
   <body>
     <div class="container__price__0">
-      <div class="container__0">
+      <div class="container__products">
         <img
           class="product1"
           src="./img_products/1__table__products/product1.png"
           alt="product1"
         />
       </div>
-      <div class="container__1">
+      <div class="container__products">
         <img
           class="product2"
           src="./img_products/2__table__products/product1.png"
           alt="product2"
         />
       </div>
-      <div class="container__2">
+      <div class="container__products">
         <img
           class="product3"
           src="./img_products/3__table__products/product1.png"
           alt="product3"
         />
       </div>
-    </div>
-    <div class="container__price__1">
-      <div class="container__3">
+
+      <div class="container__products">
         <img
           class="product4"
           src="./img_products/4__table__products/product1.png"
           alt="product4"
         />
       </div>
-      <div class="container__4">
+      <div class="container__products">
         <img
           class="product5"
           src="./img_products/5__table__products/product1.png"
           alt="product5"
         />
       </div>
-      <div class="container__5">
+      <div class="container__products">
         <img
           class="product6"
           src="./img_products/6__table__products/product1.png"
