--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           alt="product1"
         />
       </div>
+
       <div class="container__products">
         <img
           class="product2"
@@ -36,6 +37,7 @@
           alt="product2"
         />
       </div>
+
       <div class="container__products">
         <img
           class="product3"
@@ -43,31 +45,32 @@
           alt="product3"
         />
       </div>
-
+    </div>
+    <!-- SECON SECTOR -->
+    <div class="container__price__1">
       <div class="container__products">
         <img
           class="product4"
           src="./img_products/4__table__products/product1.png"
-          alt="product4"
+          alt="product1"
         />
       </div>
+
       <div class="container__products">
         <img
           class="product5"
           src="./img_products/5__table__products/product1.png"
-          alt="product5"
+          alt="product2"
         />
       </div>
+
       <div class="container__products">
         <img
           class="product6"
           src="./img_products/6__table__products/product1.png"
-          alt="product5"
+          alt="product3"
         />
       </div>
-    </div>
-    <div class="container__slider">
-      <div class="slider"></div>
     </div>
   </body>
 </html>
