--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container__price__0">
-      <div class="container__products">
+      <div class="container__product__1">
         <img
           class="product1"
           src="./img_products/1__table__products/product1.png"
@@ -30,7 +30,7 @@
         />
       </div>
 
-      <div class="container__products">
+      <div class="container__product__2">
         <img
           class="product2"
           src="./img_products/2__table__products/product1.png"
@@ -38,7 +38,7 @@
         />
       </div>
 
-      <div class="container__products">
+      <div class="container__product__3">
         <img
           class="product3"
           src="./img_products/3__table__products/product1.png"
@@ -48,7 +48,7 @@
     </div>
     <!-- SECON SECTOR -->
     <div class="container__price__1">
-      <div class="container__products">
+      <div class="container__product__4">
         <img
           class="product4"
           src="./img_products/4__table__products/product1.png"
@@ -56,7 +56,7 @@
         />
       </div>
 
-      <div class="container__products">
+      <div class="container__product__5">
         <img
           class="product5"
           src="./img_products/5__table__products/product1.png"
@@ -64,7 +64,7 @@
         />
       </div>
 
-      <div class="container__products">
+      <div class="container__product__6">
         <img
           class="product6"
           src="./img_products/6__table__products/product1.png"
