--- a/index.html
+++ b/index.html
@@ -72,5 +72,22 @@
         />
       </div>
     </div>
+
+    <div class="flip-container">
+      <div class="flipper">
+        <div class="front">
+          <img
+            src="./img_products/1__table__products/broduct1-2.png"
+            alt="Front Image"
+          />
+        </div>
+        <div class="back">
+          <img
+            src="./img_products/1__table__products/product1.png"
+            alt="Back Image"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
