--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,75 +18,41 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 
     <title>Price__Slider</title>
   </head>
   <body>
-    <div class="container__price__0">
-      <div class="container__product__1">
-        <img
-          class="product1"
-          src="./img_products/1__table__products/product1.png"
-          alt="product1"
-        />
-      </div>
-
-      <div class="container__product__2">
-        <img
-          class="product2"
-          src="./img_products/2__table__products/product1.png"
-          alt="product2"
-        />
-      </div>
-
-      <div class="container__product__3">
-        <img
-          class="product3"
-          src="./img_products/3__table__products/product1.png"
-          alt="product3"
-        />
-      </div>
-    </div>
-    <!-- SECON SECTOR -->
-    <div class="container__price__1">
-      <div class="container__product__4">
-        <img
-          class="product4"
-          src="./img_products/4__table__products/product1.png"
-          alt="product1"
-        />
-      </div>
-
-      <div class="container__product__5">
-        <img
-          class="product5"
-          src="./img_products/5__table__products/product1.png"
-          alt="product2"
-        />
-      </div>
-
-      <div class="container__product__6">
-        <img
-          class="product6"
-          src="./img_products/6__table__products/product1.png"
-          alt="product3"
-        />
-      </div>
-    </div>
-
-    <div class="flip-container">
-      <div class="flipper">
-        <div class="front">
-          <img
-            src="./img_products/1__table__products/broduct1-2.png"
-            alt="Front Image"
-          />
+    <div class="container__img-slider">
+      <div class="container__slider-container">
+        <div class="slide">
+          <img src="./img_products/1__table__products/broduct1-2.png" />
+          <div class="container__details">asdasdsadasdsadkjasjd</div>
         </div>
-        <div class="back">
-          <img
-            src="./img_products/1__table__products/product1.png"
-            alt="Back Image"
-          />
+
+        <div class="slide">
+          <img src="./img_products/1__table__products/broduct1-2.png" />
+        </div>
+
+        <div class="slide">
+          <img src="./img_products/1__table__products/broduct1-2.png" />
+        </div>
+      </div>
+    </div>
+    <!---->
+    <div class="container__img-slider">
+      <div class="container__slider-container">
+        <div class="slide">
+          <img src="./img_products/1__table__products/broduct1-2.png" />
+          <div class="container__details">asdasdsadasdsadkjasjd</div>
+        </div>
+
+        <div class="slide">
+          <img src="./img_products/1__table__products/broduct1-2.png" />
+        </div>
+
+        <div class="slide">
+          <img src="./img_products/1__table__products/broduct1-2.png" />
         </div>
       </div>
     </div>
