--- a/index.html
+++ b/index.html
@@ -27,15 +27,23 @@
       <div class="container__slider-container">
         <div class="slide">
           <img src="./img_products/1__table__products/broduct1-2.png" />
-          <div class="container__details">asdasdsadasdsadkjasjd</div>
+          <div class="container__details">
+            Details and descriptions of products
+          </div>
         </div>
 
         <div class="slide">
-          <img src="./img_products/1__table__products/broduct1-2.png" />
+          <img src="./img_products/1__table__products/product1.png" />
+          <div class="container__details">
+            Details and descriptions of products
+          </div>
         </div>
 
         <div class="slide">
-          <img src="./img_products/1__table__products/broduct1-2.png" />
+          <img src="./img_products/2__table__products/product1.png" />
+          <div class="container__details">
+            Details and descriptions of products
+          </div>
         </div>
       </div>
     </div>
@@ -43,16 +51,24 @@
     <div class="container__img-slider">
       <div class="container__slider-container">
         <div class="slide">
-          <img src="./img_products/1__table__products/broduct1-2.png" />
-          <div class="container__details">asdasdsadasdsadkjasjd</div>
+          <img src="./img_products/3__table__products/product1.png" />
+          <div class="container__details">
+            Details and descriptions of products
+          </div>
         </div>
 
         <div class="slide">
           <img src="./img_products/1__table__products/broduct1-2.png" />
+          <div class="container__details">
+            Details and descriptions of products
+          </div>
         </div>
 
         <div class="slide">
           <img src="./img_products/1__table__products/broduct1-2.png" />
+          <div class="container__details">
+            Details and descriptions of products
+          </div>
         </div>
       </div>
     </div>
