--- a/index.html
+++ b/index.html
@@ -26,50 +26,35 @@
     <div class="container__img-slider">
       <div class="container__slider-container">
         <div class="slide">
-          <img src="./img_products/1__table__products/broduct1-2.png" />
-          <div class="container__details">
-            Details and descriptions of products
+          <div class="container__row_1">
+            <img src="./img_products/1__table__products/broduct1-2.png" />
+            <div class="container__details">
+              Details and descriptions of products
+            </div>
           </div>
         </div>
 
         <div class="slide">
+          <div class="container__row_1">
           <img src="./img_products/1__table__products/product1.png" />
           <div class="container__details">
             Details and descriptions of products
           </div>
         </div>
+        </div>
 
         <div class="slide">
+          <div class="container__row_1">
           <img src="./img_products/2__table__products/product1.png" />
           <div class="container__details">
             Details and descriptions of products
           </div>
         </div>
+        </div>
       </div>
     </div>
-    <!---->
-    <div class="container__img-slider">
-      <div class="container__slider-container">
-        <div class="slide">
-          <img src="./img_products/3__table__products/product1.png" />
-          <div class="container__details">
-            Details and descriptions of products
-          </div>
-        </div>
-
-        <div class="slide">
-          <img src="./img_products/1__table__products/broduct1-2.png" />
-          <div class="container__details">
-            Details and descriptions of products
-          </div>
-        </div>
-
-        <div class="slide">
-          <img src="./img_products/1__table__products/broduct1-2.png" />
-          <div class="container__details">
-            Details and descriptions of products
-          </div>
-        </div>
+   
+    
       </div>
     </div>
   </body>
