--- a/index.html
+++ b/index.html
@@ -26,28 +26,49 @@
     <div class="container__img-slider">
       <div class="container__slider-container">
         <div class="slide">
-          <div class="container__row_1">
+          <div class="container__row">
             <img src="./img_products/1__table__products/broduct1-2.png" />
             <div class="container__details">
-              Details and descriptions of products
+              <h2 class="about__item">About this item</h2>
+            <ul type="" class="ul__style__list">
+              <li>The M18 1/2 inch Hammer Drill Driver with Milwaukee 4 pole frameless motor delivers 450 inch lbs. of peak torque; 0–550/0–1700 RPM; and 29000 BPM</li>
+              <li>Includes the M18 1/4-inch Hex Compact Impact Driver featuring a Milwaukee-designed impact mechanism for 1400 inch lbs. of torque</li>
+              <li>DPM Digital Power Management overload protection prevents damage to the tool and battery in abusive situations</li>
+              <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
+              <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
+            </ul>
             </div>
           </div>
         </div>
 
         <div class="slide">
-          <div class="container__row_1">
+          <div class="container__row">
           <img src="./img_products/1__table__products/product1.png" />
           <div class="container__details">
-            Details and descriptions of products
+            <h2 class="about__item">About this item</h2>
+            <ul type="" class="ul__style__list">
+              <li>The M18 1/2 inch Hammer Drill Driver with Milwaukee 4 pole frameless motor delivers 450 inch lbs. of peak torque; 0–550/0–1700 RPM; and 29000 BPM</li>
+              <li>Includes the M18 1/4-inch Hex Compact Impact Driver featuring a Milwaukee-designed impact mechanism for 1400 inch lbs. of torque</li>
+              <li>DPM Digital Power Management overload protection prevents damage to the tool and battery in abusive situations</li>
+              <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
+              <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
+            </ul>
           </div>
         </div>
         </div>
 
         <div class="slide">
-          <div class="container__row_1">
+          <div class="container__row">
           <img src="./img_products/2__table__products/product1.png" />
           <div class="container__details">
-            Details and descriptions of products
+            <h2 class="about__item">About this item</h2>
+            <ul type="" class="ul__style__list">
+              <li>The M18 1/2 inch Hammer Drill Driver with Milwaukee 4 pole frameless motor delivers 450 inch lbs. of peak torque; 0–550/0–1700 RPM; and 29000 BPM</li>
+              <li>Includes the M18 1/4-inch Hex Compact Impact Driver featuring a Milwaukee-designed impact mechanism for 1400 inch lbs. of torque</li>
+              <li>DPM Digital Power Management overload protection prevents damage to the tool and battery in abusive situations</li>
+              <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
+              <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
+            </ul>
           </div>
         </div>
         </div>
