--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     
       </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer"><div class="container__footer">
+      <div class="cube__corner__footer"></div>
+      <div class="footer__text">Thanks for Visit Our Second Location</div>
+    </div>
+  </div>
   </body>
 </html>
