--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
       <div class="footer__text__hello">Come say hello!</div>
       <div class="footer__order">Order Parts Today<br>
       Pick-up or delivery</div>
-      <div class="container__footer">
-      
+      <div class="footer__phone__number">
+        (204) 560-3460<br>
+        ctrautoparts.ca
+      </div>
     </div>
     
     </div>
