--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         (204) 560-3460<br>
         ctrautoparts.ca
       </div>
+      <div class="qr__scan__code">
+        <img src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr">
+      </div>
     </div>
     
     </div>
