--- a/index.html
+++ b/index.html
@@ -78,25 +78,19 @@
     
       </div>
     </div>
-    <div class="footer">
-      <div class="container__text">
-      <div class="footer__text__header">Thanks for Visit Our Second Location</div>
-      <div class="footer__text__adress">220 Tranport Rd <br>
-      Sunnsyde, MB</div>
-      <div class="footer__text__hello">Come say hello!</div>
-      <div class="footer__order">Order Parts Today<br>
-      Pick-up or delivery</div>
-      <div class="footer__phone__number">
-        (204) 560-3460<br>
-        ctrautoparts.ca
-      </div>
-      <div class="qr__scan__code">
-        <img src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr">
-      </div>
-    </div>
-    
-    </div>
-    <div class="cube__corner__footer"></div>
-  </div>
+<div class="container__footer">
+<div class="footer__text">
+  <h2>Thanks for Visit Our Second Location</h2>
+  <p>220 Tranport Rd</p>
+  <p>Sunnsyde, MB</p>
+  <p>Come say hello!</p>
+  <p>Order Parts Today</p>
+  <p>Pick-up or delivery</p>
+  <p>(204) 560-3460</p>
+  <p>ctrautoparts.ca</p>
+</div>
+<div ><img class="footer__qr"  src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr"></div>
+</div>
+
   </body>
 </html>
