--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   <p>Come say hello!</p>
   <p>Order Parts Today</p>
   <p>Pick-up or delivery</p>
-  <p>(204) 560-3460</p>
-  <p>ctrautoparts.ca</p>
+  <h3>(204) 560-3460</h3>
+  <h3>ctrautoparts.ca</h3>
 </div>
 <div ><img class="footer__qr"  src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr"></div>
 </div>
