--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
               <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
             </ul>
-            <div class="test___space">asd</div>
+            <div class="test___space"></div>
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
               <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
               <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
             </ul>
-            <div class="test___space">asd</div>
+            <div class="test___space"></div>
           </div>
         </div>
         </div>
@@ -71,7 +71,7 @@
               <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
               <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
             </ul>
-            <div class="test___space">fhgfh</div>
+            <div class="test___space"></div>
           </div>
         </div>
         </div>
