--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
               <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
             </ul>
-            <div class="price___space"></div>
+            <div class="container__price__space"></div>
           </div>
         </div>
         </div>
@@ -75,7 +75,7 @@
               <li>Compatible with M18 XC High Capacity REDLITHIUM0 batteries and M18 Compact REDLITHIUM batteries</li>
               <li>Includes M18 2602-20 1/2-inch Hammer Drill Driver; M18 2650–20 1/4-inch Hex Compact Impact Driver; two M18 Compact REDLITHIUM batteries; 1-hour charger; contractor bag</li>
             </ul>
-            <div class="price___space"></div>
+            <div class="container__price__space "></div>
           </div>
         </div>
         </div>
