--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
       </div>
     </div>
 <div class="container__footer">
+  <img src="./background_img_1.jpg" alt="background" class="footer__img">
+  <img src="./background_img_2.jpg" alt="background" class="footer__img">
+  <img class="footer__qr" src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr">
 <div class="footer__text">
   <h2>Thanks for Visit Our Second Location</h2>
   <p>220 Tranport Rd</p>
@@ -96,7 +99,8 @@
   <h3>(204) 560-3460</h3>
   <h3>ctrautoparts.ca</h3>
 </div>
-<div ><img class="footer__qr"  src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr"></div>
+<div ></div>
+
 </div>
 
   </body>
