--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     <title>Price__Slider</title>
   </head>
+  
+  
   <body>
+<!--
     <div class="container__img-slider">
       <div class="container__slider-container">
         <div class="slide">
@@ -81,10 +84,33 @@
         </div>
       </div>
     </div>
-   
+   -->
+
+
+   <!--AUTO SLDER 2-->
+<div id="slider_testing">
+ <div class="slider">
+   <div class="container__slidse">
+  <img src="./img_products/3__table__products/product1-2.png" alt="Image 1">
+  <div class="container__product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente error corporis sed animi, veritatis cumque quibusdam at impedit sequi? Cumque nostrum natus quaerat repellat perspiciatis nobis vero molestias quis dicta!
+  </div>
+ </div>
+</div>
+
+<div class="slider">
+  <div class="container__slidse">
+ <img src="./img_products/3__table__products/product1.png" alt="Image 1">
+ <div class="container__product__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste veniam vel dolores nisi, voluptates incidunt ipsum eaque, alias possimus maiores natus dolore fugiat impedit, ipsa commodi quasi aspernatur tempore provident!</div>
+</div>
+</div>
+
+ 
+</div>
     
       </div>
     </div>
+<!--AUTO SLIDER END-->
+
 <div class="container__footer">
   <div class="container__img__position">
   <img src="./background_img_1.jpg" alt="background" class="footer__img">
@@ -93,7 +119,7 @@
 </div>
 
 <!--container for qr and text-->
-<!--
+<!---->
 <div class="footer__text">
   <h2>Thanks for Visit Our Second Location</h2>
   <p>220 Tranport Rd</p>
@@ -104,8 +130,11 @@
   <h3>(204) 560-3460</h3>
   <h3>ctrautoparts.ca</h3>
 </div>
--->
+
 </div>
+
+
+
 
   </body>
 </html>
