--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <div class="slider">
   <div class="container__slidse">
  <img src="./img_products/3__table__products/product1.png" alt="Image 1">
- <div class="container__product__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste veniam vel dolores nisi, voluptates incidunt ipsum eaque, alias possimus maiores natus dolore fugiat impedit, ipsa commodi quasi aspernatur tempore provident!</div>
+ <div class="container__product__description">Upgrade your low and high beam car headlights for a pair of SYLVANIA SilverStar® ULTRA halogen bulbs. Our brightest halogen headlight provides the most downroad visibility to see all aspects of the road better. The patented tri-band blue coating produces a whiter light compared to SYLVANIA Basic for improved contrast and clarity. SYLVANIA's ultra-performance headlight bulbs allow you to see farther for a better night-time driving experience.</div>
 </div>
 </div>
 
@@ -113,13 +113,16 @@
 
 <div class="container__footer">
   <div class="container__img__position">
+    <div class="footer__qr"><img class="footer__qr" src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr">
+      <div class="ctr__web__qr"><b>CTRAUTOPARTS.CA</b></div></div>
+      <div class="footer__text">20 Tranport Rd</div>
   <img src="./background_img_1.jpg" alt="background" class="footer__img">
-  <div class="footer__qr"><img class="footer__qr" src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr"></div>
   <img src="./background_img_2.jpg" alt="background" class="footer__img">
+   
 </div>
 
 <!--container for qr and text-->
-<!---->
+<!--
 <div class="footer__text">
   <h2>Thanks for Visit Our Second Location</h2>
   <p>220 Tranport Rd</p>
@@ -130,7 +133,7 @@
   <h3>(204) 560-3460</h3>
   <h3>ctrautoparts.ca</h3>
 </div>
-
+-->
 </div>
 
 
