--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 <div id="slider_testing">
  <div class="slider">
    <div class="container__slidse">
+    <div class="price">375</div>
   <img src="./img_products/3__table__products/product1-2.png" alt="Image 1">
   <div class="container__product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente error corporis sed animi, veritatis cumque quibusdam at impedit sequi? Cumque nostrum natus quaerat repellat perspiciatis nobis vero molestias quis dicta!
   </div>
@@ -113,9 +114,10 @@
 
 <div class="container__footer">
   <div class="container__img__position">
-    <div class="footer__qr"><img class="footer__qr" src="./img_products/qr_@34567Sdgrjjtsghk/true.png" alt="qr">
-      <div class="ctr__web__qr"><b>CTRAUTOPARTS.CA</b></div></div>
-      <div class="footer__text">20 Tranport Rd</div>
+    <div class="footer__qr"><div class="ctr__web__qr"><b>220 Tranport Rd</b></div>
+    <img class="footer__qr" src="./logoQr.jpg" alt="qr">
+      <div class="ctr__web__qr"><b>CTRautoparts.ca</b></div></div>
+      
   <img src="./background_img_1.jpg" alt="background" class="footer__img">
   <img src="./background_img_2.jpg" alt="background" class="footer__img">
    
