--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div id="slider_testing">
  <div class="slider">
    <div class="container__slidse">
-    <div class="price">375</div>
+    <div class="price">375 &#x24;</div>
   <img src="./img_products/3__table__products/product1-2.png" alt="Image 1">
   <div class="container__product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente error corporis sed animi, veritatis cumque quibusdam at impedit sequi? Cumque nostrum natus quaerat repellat perspiciatis nobis vero molestias quis dicta!
   </div>
