--- a/index.html
+++ b/index.html
@@ -28,23 +28,26 @@
 
 
    <!--AUTO SLDER 2-->
-<div id="slider_testing">
+<div class="slider__body" id="slider_testing">
  <div class="slider">
+  
    <div class="container__slidse">
-    <div class="price">375 &#x24;</div>
-  <img src="./img_products/3__table__products/product1-2.png" alt="Image 1">
-  <div class="container__product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente error corporis sed animi, veritatis cumque quibusdam at impedit sequi? Cumque nostrum natus quaerat repellat perspiciatis nobis vero molestias quis dicta!
+
+  <div class="price">&#x24;9.49 </div>
+  <div><img src="./img_products/brake_pad_spreader_24400/brake_pad_spreader.jpg" alt="Image 1"></div>
+  <div class="product__description">BRAKE PAD SPREADER #24400</div>
   </div>
+
  </div>
 </div>
-
+<!--
 <div class="slider">
   <div class="container__slidse">
  <img src="./img_products/3__table__products/product1.png" alt="Image 1">
  <div class="container__product__description">Upgrade your low and high beam car headlights for a pair of SYLVANIA SilverStar® ULTRA halogen bulbs. Our brightest halogen headlight provides the most downroad visibility to see all aspects of the road better. The patented tri-band blue coating produces a whiter light compared to SYLVANIA Basic for improved contrast and clarity. SYLVANIA's ultra-performance headlight bulbs allow you to see farther for a better night-time driving experience.</div>
 </div>
 </div>
-
+-->
  
 </div>
     
