--- a/index.html
+++ b/index.html
@@ -22,55 +22,77 @@
 
     <title>Price__Slider</title>
   </head>
-  
-  
+
   <body>
-
-
-   <!--AUTO SLDER 2-->
-<div class="slider__body" id="slider_testing">
- <div class="slider">
-  
-   <div class="container__slidse">
-
-  <div class="price">&#x24;9.49 </div>
-  <div><img src="./img_products/brake_pad_spreader_24400/brake_pad_spreader.jpg" alt="Image 1"></div>
-  <div class="product__description">BRAKE PAD SPREADER #24400</div>
-  </div>
-
- </div>
-</div>
-<!--
-<div class="slider">
-  <div class="container__slidse">
- <img src="./img_products/3__table__products/product1.png" alt="Image 1">
- <div class="container__product__description">Upgrade your low and high beam car headlights for a pair of SYLVANIA SilverStar® ULTRA halogen bulbs. Our brightest halogen headlight provides the most downroad visibility to see all aspects of the road better. The patented tri-band blue coating produces a whiter light compared to SYLVANIA Basic for improved contrast and clarity. SYLVANIA's ultra-performance headlight bulbs allow you to see farther for a better night-time driving experience.</div>
-</div>
-</div>
--->
- 
-</div>
-    
+    <!--SLDER 1-->
+    <div class="slider__body" id="slider_testing">
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="price">&#x24;9.49</div>
+          <div>
+            <img
+              src="./img_products/brake_pad_spreader_24400/brake_pad_spreader.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="product__description">BRAKE PAD SPREADER #24400</div>
+        </div>
+      </div>
+      <!--SLDER 2-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="price">&#x24;3.49</div>
+          <div>
+            <img
+              class="slider__2__img"
+              src="./img_products/kleen_flo/kleen_flo_313.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="product__description">
+            KLEEN-FLO BRAKE KLEEN<br />#313
+          </div>
+        </div>
+      </div>
+      <!--SLDER 3-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="price">&#x24;20</div>
+          <div>
+            <img
+              class="slider__2__img"
+              src="./img_products/kleen_flo/kleen_flo_313.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="product__description">
+            GREASE MONKEY NITRILE GLOVES<br />#5555PF
+          </div>
+        </div>
       </div>
     </div>
-<!--AUTO SLIDER END-->
 
-<div class="container__footer">
-  <div class="container__img__position">
-    <div class="footer__qr"><div class="ctr__web__qr"><b>220 Tranport Rd</b></div>
-    <img class="footer__qr" src="./logoQr.jpg" alt="qr">
-      <div class="ctr__web__qr"><b>CTRautoparts.ca</b></div></div>
-      
-  <img src="./background_img_1.jpg" alt="background" class="footer__img">
-  <img src="./background_img_2.jpg" alt="background" class="footer__img">
-   
-</div>
+    <!--END SILDER-->
 
+    <div class="container__footer">
+      <div class="container__img__position">
+        <div class="footer__qr">
+          <div class="ctr__web__qr"><b>220 Tranport Rd</b></div>
+          <img class="footer__qr" src="./logoQr.jpg" alt="qr" />
+          <div class="ctr__web__qr"><b>CTRautoparts.ca</b></div>
+        </div>
 
-</div>
-
-
-
-
+        <img
+          src="./background_img_1.jpg"
+          alt="background"
+          class="footer__img"
+        />
+        <img
+          src="./background_img_2.jpg"
+          alt="background"
+          class="footer__img"
+        />
+      </div>
+    </div>
   </body>
 </html>
