--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="slider">
         <div class="container__slidse">
           <div class="price">&#x24;9.49</div>
-          <div>
+          <div class="img__in__slider">
             <img
               src="./img_products/brake_pad_spreader_24400/brake_pad_spreader.jpg"
               alt="Image 1"
@@ -42,10 +42,9 @@
       <div class="slider">
         <div class="container__slidse">
           <div class="price">&#x24;3.49</div>
-          <div>
+          <div class="img__in__slider">
             <img
-              class="slider__2__img"
-              src="./img_products/kleen_flo/kleen_flo_313.jpg"
+              src="./img_products/kleen_flo/kleen_flo_313.png"
               alt="Image 1"
             />
           </div>
@@ -58,7 +57,7 @@
       <div class="slider">
         <div class="container__slidse">
           <div class="price">&#x24;20</div>
-          <div>
+          <div class="img__in__slider">
             <img
               class="slider__2__img"
               src="./img_products/grease__monkey/grease_monkey_gloves.jpg"
