--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <body>
     <!--SLDER 1-->
+
     <div class="slider__body" id="slider_testing">
       <div class="slider">
         <div class="container__slidse">
@@ -60,7 +61,7 @@
           <div class="img__in__slider">
             <img
               class="slider__2__img"
-              src="./img_products/grease__monkey/grease_monkey_gloves.jpg"
+              src="./img_products/grease__monkey/grease_monkey_gloves.png"
               alt="Image 1"
             />
           </div>
