--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
           </div>
         </div>
       </div>
+
+      <!--SLDER 3-->
+      <div class="slider">
+        <div class="container__slidse">
+          <div class="price">&#x24;60</div>
+          <div class="img__in__slider">
+            <img
+              class="slider__2__img"
+              src="./img_products/bosh_brand/bosh_brake_pads.jpg"
+              alt="Image 1"
+            />
+          </div>
+          <div class="product__description">BOSH QUIETCAST BRAKES</div>
+        </div>
+      </div>
     </div>
 
     <!--END SILDER-->
