--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="price">&#x24;9.49</div>
           <div class="img__in__slider">
             <img
-              src="./img_products/brake_pad_spreader_24400/brake_pad_spreader.jpg"
+              src="./img_products/bosh_brand/bosh_brake_pads.png"
               alt="Image 1"
             />
           </div>
@@ -95,7 +95,7 @@
 
     <!--footer-->
 
-  <div class="container_footer"><img src="/img_products/logo.png" alt="">
+  <div class="container_footer"> 
   
     <div class="footer_text">Welcome to CTR Auto Parts!<br>
       Location: 220 Transport Road<br>
