--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
   <div class="container_footer"> 
   
-    <div class="footer_text">Welcome to CTR Auto Parts!<br>
+    <div class="footer_text">
+      <img class="footer_logo" src="./img_products/logo/logo.png" alt="logo"><br>
       Location: 220 Transport Road<br>
       Contact: (204) 560-3460</div>
     <div class="footer_text">We specialize in providing high-quality auto parts for all makes and models.
@@ -105,7 +106,7 @@
      </div>
     <div class="footer_text">Our knowledgeable staff is here to assist you with expert advice and recommendations.
       We believe in building lasting relationships with our customers.
-      Visit Us Today!</div>
+     </div>
   </div>
 
   </body>
