--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container__slidse">
           <div class="price">&#x24;3.49</div>
           <div class="img__in__slider">
-            <img
+            <img class="for_rotate"
               src="./img_products/kleen_flo/kleen_flo_313.png"
               alt="Image 1"
             />
