--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!--SLIDER 0 TRAILER VALET-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;219.94</div>
+          <div class="price">&#x24;219.<small>94</small></div>
           <div class="img__in__slider">
             <img class="trailer_valet"
               src="./img_products/trailer_valet/tvdjx2s/tvdjx2s.webp"
@@ -45,7 +45,7 @@
     
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;9.49</div>
+          <div class="price">&#x24;9.<small>49</small></div>
           <div class="img__in__slider">
             <img
               src="./img_products/brake_pad_spreader_24400/brake_pad_spreader.png"
@@ -58,7 +58,7 @@
       <!--SLDER 2 KLEEN-FLO-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;3.49</div>
+          <div class="price">&#x24;3.<small>49</small></div>
           <div class="img__in__slider">
             <img class="for_rotate"
               src="./img_products/kleen_flo/kleen_flo_313.png"
@@ -73,7 +73,7 @@
       <!--SLDER 3 GREASE MONKEY GLOVES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;20</div>
+          <div class="price">&#x24;20.<small></small></div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
@@ -90,7 +90,7 @@
       <!--SLDER 3 BOSH QUIETCAST BRAKES-->
       <div class="slider">
         <div class="container__slidse">
-          <div class="price">&#x24;60</div>
+          <div class="price">&#x24;60.<small>00</small></div>
           <div class="img__in__slider">
             <img
               class="slider__2__img"
