--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="slider__body" id="slider_testing">
       <!--SLIDER TRAILER VALET VIDEO-->
       <div class="slider video">
-        <video autoplay muted id="autoplayVideo">
+        <video autoplay muted loop id="autoplayVideo">
           <source
             src="./img_products/trailer_valet/trailer_valet_video/Trailer_Valet_XL_Mover_Promo_Video.mp4"
             type="video/mp4"
